# mgplot

./: .gitignore  CHANGELOG.md  README.md  build-test.sh  build_test.sh  pyproject.toml
docs/: mgplot.html  search.js
docs/mgplot/: bar_plot.html  covid_recovery_plot.html  fill_between_plot.html  finalise_plot.html  growth_plot.html  line_plot.html  multi_plot.html  postcovid_plot.html  revision_plot.html  run_highlight_plot.html  run_plot.html  seastrend_plot.html  summary_plot.html
src/mgplot/: __init__.py  annotation_utils.py  axis_utils.py  bar_plot.py  colors.py  constants.py  covid_recovery_plot.py  date_utils.py  fill_between_plot.py  finalise_plot.py  finalisers.py  growth_plot.py  keyword_checking.py  kw_type_checking.py  line_plot.py  lint-all.sh  multi_plot.py  postcovid_plot.py  revision_plot.py  run_highlight_plot.py  run_plot.py  seastrend_plot.py  settings.py  summary_plot.py  test.py  utilities.py
test/: test-executed.ipynb  test.ipynb  test_annotation_collision.py  test_axvline_text.py  test_bar_horizontal.py  test_bar_string_index.py  test_chart_subdir.py  test_splat_sequences.py  test_tick_relabel.py
