[project]
name = "mgplot"
version = "0.0.1"
description = "mgplot is a frontend for matplotlib"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # - system
    "typing",

    # - data science 
    "numpy",
    "matplotlib",
    "numpy",
    "pandas",
    "pathlib",

    # - code
    "black",
    "mypy",
    "ruff",
    "pylint",
    "pdoc",

    # - typing
    "pandas-stubs",

]

[project.optional-dependencies]
build = ["setuptools", "cython"]

[project.urls]
Homepage = "https://github.com/bpalmer4/mgplot"


